# Puppy

./: .gitignore  .swiftlint.yml  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  Dangerfile  Gemfile  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  Package@swift-5.6.swift  Puppy.podspec  README.md  WORKSPACE
.github/workflows/: ci.yml  danger.yml  darwin.yml  linux.yml  windows.yml
Configurations/: Common.xcconfig  Framework.xcconfig  FrameworkTests.xcconfig  StaticFramework.xcconfig  StaticFrameworkTests.xcconfig
Puppy.xcodeproj/: project.pbxproj
Puppy.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Puppy.xcodeproj/xcshareddata/xcschemes/: CPuppy.xcscheme  Puppy.xcscheme  SwiftLint.xcscheme
Puppy.xcworkspace/: contents.xcworkspacedata
Puppy.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Sources/: CMakeLists.txt
Sources/CPuppy/: CMakeLists.txt  CPuppy.modulemap  module.modulemap
Sources/CPuppy/include/: CPuppy.h  cpuppy.h  module.modulemap
Sources/CPuppy/src/: CPuppy.c
Sources/Puppy/: BaseLogger.swift  CMakeLists.txt  Compatibility.swift  Compression.swift  ConsoleLogger.swift  FileError.swift  FileLogger.swift  FileLoggerable.swift  FileManager+Windows.swift  FileRotationLogger.swift  Formatter.swift  LogColor.swift  LogFormatter.swift  LogLevel.swift  Loggerable.swift  OSLogger.swift  Puppy.swift  PuppyLogHandler.swift  SystemLogger.swift
Sources/SupportingFiles/: Info.plist
Tests/: LinuxMain.swift
Tests/CPuppyTests/: CPuppyTests.m
Tests/PuppyTests/: BaseLoggerTests.swift  FileLoggerTests.swift  FileManager+WindowsTests.swift  FileRotationLoggerTests.swift  FormatterTests.swift  LogFormatterTests.swift  LoggerableTests.swift  MockLogger.swift  OSLoggerTests.swift  PuppyLogHandlerTests.swift  PuppyTests.swift  SystemLoggerTests.swift
Tests/SupportingFiles/: Info.plist
actions/: GHASwiftWindows.ps1  gha-swift-linux.sh  gha-swift-macos.sh
cmake/modules/: CMakeLists.txt  PuppyConfig.cmake.in  SwiftSupport.cmake
scripts/: SwiftWindows.ps1  bazel-script.sh  carthage-workaround.sh  cmake-script.sh  llvm-cov-export.sh  llvm-cov-report.sh  llvm-cov-script.sh  xcodebuild-script.sh
temp/: logging.BUILD
