load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)

load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
    "swift_test",
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

cc_library(
    name = "CPuppy",
    srcs = ["Sources/CPuppy/src/CPuppy.c"],
    hdrs = ["Sources/CPuppy/include/CPuppy.h"],
    includes = ["Sources/CPuppy/include"],
    linkstatic = True,
    tags = ["swift_module=CPuppy"],
)

swift_library(
    name = "Puppy",
    srcs = glob(["Sources/Puppy/**/*.swift"]),
    deps = ["@swift-log//:Logging"] + select({
        ":linux": [":CPuppy"],
        "//conditions:default": [],
    }),
    module_name = "Puppy",
)
