module(
    name = "sushichop_puppy",
    version = "0.8.0",
    repo_name = "com_github_sushichop_puppy",
    compatibility_level = 0,
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "rules_swift", version = "3.0.2", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.1.1", repo_name = "rules_cc")

apple_cc_configure = use_extension("@build_bazel_apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")

sushichop_puppy_externals = use_extension("//externals:repos.bzl", "external_repos")
use_repo(sushichop_puppy_externals, "com_github_apple_swift_log")
